[metadata]
name = django-cool
version = attr: cool.__version__
url = https://django.cool
author = 007
author_email = 007@django.cool
description = Cool to use for the Django Framework.
long_description = file: README.rst
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

project_urls =
    Documentation = https://docs.django.cool/
    Source = https://github.com/007gzs/django-cool

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Django >= 2.2
    djangorestframework

[options.packages.find]
exclude = tests,tests.*,docs,docs.*

[flake8]
exclude = .git,__pycache
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = cool
line_length = 79
multi_line_output = 5
